Closed Bug 205492 Opened 23 years ago Closed 22 years ago

Browser crashes as it loads the URL [@ nsWindow::NativeCreate]

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: gavrilus, Assigned: blizzard)

References

()

Details

(Keywords: crash, fixed1.4.2)

Crash Data

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (compatible; Konqueror/3.1; Linux) Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3) Gecko/20030430 Debian/1.3-5 The browser crashes while it's loading the page http://www.gabibbiesaltati.cjb.net/ Reproducible: Always Steps to Reproduce: 1. Load URL http://www.gabibbiesaltati.cjb.net/ 2. 3. Actual Results: browser crashed Expected Results: loaded successfully the page It crashes on Galeon too, so I think it's an engine issue
that url is successfully loaded on konqueror browser
wfm with win2k build 20030512.. Reporter: Please try it again with 1.4b because your build is to old (we accept only bugs from the latest milestone) and please use a mozilla.org build and not a debian one. (they add their own patches in their builds and we don't accept such bugs until you can reproduce this with a mozilla.org build)
Tried it with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030507 Same result.... the page loads a bit then mozilla crashes without reporting anything.
Keywords: crash
WorksForMe using FizzillaMach/2003-05-07-14-1.4b. Gavrila, does TalkBack run after these crashes? If so, please provide a representative incident ID.
Keywords: stackwanted
Confirmed. Crashes for me too on Linux with mozilla cvs 20030512. Stripped stack below. Anyone have a debug build to do a proper stack ? Possibly only a gtk2 problem. Can someone confirm/deny with a gtk1 build ? Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 1024 (LWP 688)] 0x412b300e in nsWindow::NativeCreate () from /usr/local/mozilla/components/libwidget_gtk2.so (gdb) bt #0 0x412b300e in nsWindow::NativeCreate () from /usr/local/mozilla/components/libwidget_gtk2.so #1 0x412af1ce in nsWindow::Create () from /usr/local/mozilla/components/libwidget_gtk2.so #2 0x40f96aaa in NSGetModule () from /usr/local/mozilla/components/libgklayout.so #3 0x40d7800b in NSGetModule () from /usr/local/mozilla/components/libgklayout.so #4 0x40d7576f in NSGetModule () from /usr/local/mozilla/components/libgklayout.so #5 0x40d74ed7 in NSGetModule () from /usr/local/mozilla/components/libgklayout.so #6 0x41220ced in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #7 0x4121e76e in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #8 0x4121fa3f in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #9 0x41231c9a in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #10 0x41235fca in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #11 0x41235456 in NSGetModule () from /usr/local/mozilla/components/libdocshell.so #12 0x40b3c052 in NSGetModule () from /usr/local/mozilla/components/libnecko.so etc...
Attached file stacktrace —
stacktrace from gtk2/CVS. worksforme with gtk1
==> gtk
Assignee: general → blizzard
Status: UNCONFIRMED → NEW
Component: Browser-General → GFX: Gtk
Ever confirmed: true
Keywords: stackwanted
QA Contact: general → ian
Summary: Browser crashes as it loads the URL → Browser crashes as it loads the URL [@ nsWindow::NativeCreate]
Hey, something that crashes for me for a change. Check that out.
Blocks: gtk2
Status: NEW → ASSIGNED
Anyone looking at this ? Still crashes with cvs 20030610.
I'm also seeing this, on the following URL: http://sports.espn.go.com/mlb/playoffs2003/news/story?id=1635910 The cause of the crash itself is that gtk2's nsWindow isn't prepared for being initialized as a child window, but with no parent nsIWidget. We could bulletproof it a bit there, but this should probably not be happening at all. I think part of the problem might be what happens in nsView::CreateWidget(). GetOffsetFromWidget() is failing to fill in |parent| with a valid nsIWidget. roc, any idea what that means?
*** Bug 221747 has been marked as a duplicate of this bug. ***
GetOffsetFromWidget() just walks the view tree looking for a view with a widget. If it's not finding a widget, then I guess there's no view with a widget...
Is the root view supposed to have a widget?
*ahem*
Anyone have any ideas?
*** Bug 222061 has been marked as a duplicate of this bug. ***
*** Bug 224383 has been marked as a duplicate of this bug. ***
*** Bug 225130 has been marked as a duplicate of this bug. ***
Attached patch wallpaper patch — — Splinter Review
This patch papers over the problem.
Attachment #136725 - Flags: superreview?(dbaron)
Attachment #136725 - Flags: review?(roc)
Attachment #136725 - Flags: superreview?(dbaron) → superreview+
Comment on attachment 136725 [details] [diff] [review] wallpaper patch Easy crasher fix.
Attachment #136725 - Flags: approval1.6?
Comment on attachment 136725 [details] [diff] [review] wallpaper patch a=chofmann for 1.6
Attachment #136725 - Flags: approval1.6? → approval1.6+
Checked in. Should take this for 1.4.2, too.
Attachment #136725 - Flags: approval1.4.2?
Comment on attachment 136725 [details] [diff] [review] wallpaper patch a=mkaply for 1.4.2
Attachment #136725 - Flags: approval1.4.2? → approval1.4.2+
Fixed on the 1.4 branch before 1.4.2.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 230748 has been marked as a duplicate of this bug. ***
*** Bug 230879 has been marked as a duplicate of this bug. ***
Attached file Strace of the crash (obsolete) —
Still crashing with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20040112 Firebird/0.7 on gentoo gnu/linux. Attached the strace (opened the program, pasted the url and presssed enter)
Gavrila, strace is useless. Please provide a debugging stack from the crash http://www.mozilla.org/unix/debugging-faq.html Also, i've just tried it with Firebird and no crash, so the crash you are seeing is probably unrealted. But we can't tell until you provide a good debug stack.
Attached file Crash debug —
Tnx for the faq... I followed them and obtained this one attached. Regards
Attachment #139026 - Attachment is obsolete: true
What we need is the stack __back trace__. Please, do the following: 1. build a debug build, which you apparently already did. 2. run it as you usually do (you don't have to run it inside a gdb) 3. when your debug build crashes, you'll get an instruction like 'gdb <mozilla/firebird_binary_path> <process_id>' (where <process_id> is a number) 4. copy & paste it and run the command. 5. At gdb, run 'bt' (back trace) and attach the output here.
Attached file Stack Backtrace —
Here it is the backtrace of the stack. I hope I have done things well this time:)
Keywords: fixed1.4.2
Product: Core → Core Graveyard
Crash Signature: [@ nsWindow::NativeCreate]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: