Bug #205492.  Don't crash if someone passes us an invalid widget parent.  This is wallpaper, but at least the paper is pretty.  r=roc, sr=dbaron, a=chofmann